<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_act_info_pessoais">Informações Pessoais</string>

    <string name="title_tela_inicial">Curriculum Vitae</string>
    <string name="title_info_pessoais">Info</string>
    <string name="title_objetivo">Objetivo</string>
    <string name="title_formacao">Formação</string>
    <string name="title_experiencia">Experiência</string>
    <string name="title_info">Informações Pessoais</string>
    <string name="title_curso">Cursos</string>
    <string name="title_qualificacao">Qualificação</string>
    <string name="title_idioma">Idioma</string>

    <string name="title_outros">Outros</string>

    <string name="button_ok">OK</string>
    <string name="button_excluir">Excluir</string>

    <string name="message_aviso">Aviso</string>
    <string name="message_erro">Erro</string>
    <string name="message_sim">Sim</string>
    <string name="message_nao">Não</string>
    <string name="message_excluir">Excluir</string>
    <string name="message_excluir_formacao">Deseja excluir a formação selecionada?</string>
    <string name="message_excluir_experiencia">Deseja excluir a experiência selecionada?</string>
    <string name="message_excluir_curso">Deseja excluir o curso selecionado?</string>
    <string name="message_excluir_qualificacao">Deseja excluir a qualificação selecionada?</string>
    <string name="message_excluir_idioma">Deseja excluir o idioma selecionado?</string>
    <string name="message_campos_invalidos_brancos">Existem campos inválidos ou em branco</string>
    <string name="message_dados_atualizados_sucesso">Dados atualizados com sucesso!!!</string>
    <string name="title_activity_act_objetivo">ActObjetivo</string>
    <string name="title_activity_act_formacao">ActFormacao</string>
    <string name="title_activity_act_formacao_operation">ActFormacaoOperation</string>
    <string name="title_activity_act_experiencia">ActExperiencia</string>
    <string name="title_activity_act_experiencia_operation">ActExperienciaOperation</string>
    <string name="title_activity_act_outros">ActOutros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_tela_inicial">Curriculum Vitae</string>
    <string name="title_activity_act_curso">ActCurso</string>
    <string name="title_activity_act_curso_operation">ActCursoOperation</string>
    <string name="title_activity_act_qualificacao">ActQualificacao</string>
    <string name="title_activity_act_qualificacao_operation">ActQualificacaoOperation</string>
    <string name="title_activity_act_idioma">ActIdioma</string>
    <string name="title_activity_actidioma_operation">ActidiomaOperation</string>

    <string name="cv_endereco">Endereço:</string>
    <string name="cv_nascimento">Nascimento:</string>
    <string name="cv_nacionalidade">Nacionalidade:</string>
    <string name="cv_telefone">Telefone:</string>
    <string name="cv_celular">Celular:</string>
    <string name="cv_email">E-mail:</string>

    <string name="cv_objetivo">Objetivo</string>
    <string name="cv_formacao">Formação</string>
    <string name="cv_experiencia">Experiência</string>
    <string name="cv_curso">Cursos Extracurriculares</string>
    <string name="cv_qualificacao">Qualificações e Atividades Profissionais</string>
    <string name="cv_idioma">Idiomas</string>
    <string name="message_programa_adequado_pdf">Você não possui programa adequado para abrir PDF</string>

</resources>
